<resources>
    <string name="app_name">IteaRecyclerViewLesson</string>
    <string name="general_text">General texty</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="title">Title</string>
    <string name="action_settings">action settings</string>

    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="content_description_settings">System settings</string>
    <string name="content_description_more">Share you contacts</string>

    <string name="button_save">Save</string>
    <string name="button_back">Bck</string>

</resources>